# kk-tool

./: AGENTS.md  README.md  TESTING.md  commands.md  deploy.sh  ingest_secrets.py  install.sh  kk  list_secrets.py  pyproject.toml  refactor_plan.md  retrieve_broker_secrets.py  setup.py  test_keyring.py
data/: cipher-sessions.db-shm  cipher-sessions.db-wal
kkcli/: __init__.py  __main__.py  config.py  envparse.py  masking.py  naming.py  storage.py
kkcli/commands/: clean_cmd.py  doctor_cmd.py  export_cmd.py  get_cmd.py  ingest_cmd.py  list_cmd.py  migrate_cmd.py  remove_cmd.py  search_cmd.py  set_cmd.py
secret_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
secret_browser_package/: secret_browser.py
