[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kktool"
version = "0.1.0"
description = "Namespace-aware CLI for GNOME Keyring (Secret Service)"
requires-python = ">=3.9"
dependencies = [
    "secretstorage>=3.3.3",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
kk = "kkcli.__main__:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
# Explicitly include only our application package to avoid flat-layout
# auto-discovery picking up unrelated top-level dirs (e.g., `data/`).
include = ["kkcli*"]
exclude = ["tests*", "test*", "docs*", "data*"]
